--- a/app/src/main/res/layout/list_item_app.xml
+++ b/app/src/main/res/layout/list_item_app.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="app"
-            type="com.example.myapp.AppData" />
+            type="com.example.myapp.database.AppData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,20 +28,19 @@
             android:id="@+id/app_name"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:appName="@{app}"
+            android:text="@{app.name}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/app_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.25"
             tools:text="@string/app_name" />
 
-        <RatingBar
-            android:layout_width="wrap_content"
+
+        <EditText
+            android:id="@+id/app_review_text"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:numStars="5"
-            android:rating="3"
-            android:stepSize="0.5"
+            android:text="@={app.review}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/app_image"
