--- a/app/src/main/res/layout/list_item_app.xml
+++ b/app/src/main/res/layout/list_item_app.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="app"
-            type="com.example.myapp.database.AppData" />
+            name="appCard"
+            type="com.example.myapp.database.AppCard" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +18,6 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:contentDescription="@string/app_icon_description"
-            app:appIcon="@{app}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +27,6 @@
             android:id="@+id/app_name"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="@{app.name}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/app_image"
             app:layout_constraintTop_toTopOf="parent"
@@ -40,11 +38,22 @@
             android:id="@+id/app_review_text"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="@={app.review}"
+            android:text="@={appCard.review}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/app_image"
             app:layout_constraintTop_toBottomOf="@+id/app_name" />
+
+        <TextView
+            android:id="@+id/textAppCardId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/app_review_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/app_name"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
