--- a/app/src/main/res/layout/add_app_button.xml
+++ b/app/src/main/res/layout/add_app_button.xml
@@ -20,7 +20,7 @@
             android:id="@+id/floatingActionButton3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:visibility="@={appListViewModel.addButtonVisible}"
             android:contentDescription="@string/add_button_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
