--- a/app/src/main/res/layout/list_item_add_app.xml
+++ b/app/src/main/res/layout/list_item_add_app.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".applist.AppListFragment">
-
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
-
         <variable
             name="appListViewModel"
             type="com.example.myapp.applist.AppListViewModel" />
+        <variable
+            name="addAppName"
+            type="com.example.myapp.database.AddAppName" />
     </data>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/add_app_button_root_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/add_app_card_button"
+        <ImageView
+            android:id="@+id/add_app_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add"
-            android:visibility="@{appListViewModel.addButtonVisible}"
-            android:contentDescription="@string/add_button_description"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_add"
-            />
+            tools:srcCompat="@mipmap/ic_launcher_round" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:checked="@={addAppName.addOrNot}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
