--- a/app/src/main/res/layout/fragment_add_app_list.xml
+++ b/app/src/main/res/layout/fragment_add_app_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="appListViewModel"
-            type="com.example.myapp.page.AppListViewModel" />
+            type="com.example.myapp.page.applist.AppListViewModel" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
