--- a/app/src/main/res/layout/list_item_app.xml
+++ b/app/src/main/res/layout/list_item_app.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="appListViewModel"
-            type="com.example.myapp.page.AppListViewModel" />
+            type="com.example.myapp.page.applist.AppListViewModel" />
         
         <import type="android.view.View"/>
     </data>
