--- a/app/src/main/res/layout/add_list_item_button.xml
+++ b/app/src/main/res/layout/add_list_item_button.xml
@@ -1,35 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="appListViewModel"
             type="com.example.myapp.page.applist.AppListViewModel" />
-        <variable
-            name="addAppName"
-            type="com.example.myapp.database.AddAppName" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/add_app_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@mipmap/ic_launcher_round" />
 
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:checked="@={addAppName.addOrNot}"
+        <Button
+            android:id="@+id/add_app_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/add"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
