--- a/app/src/main/res/layout/title_item_card.xml
+++ b/app/src/main/res/layout/title_item_card.xml
@@ -27,6 +27,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/title_list_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
