--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,11 @@
         <argument
             android:name="listId"
             app:argType="long"
-            android:defaultValue="1L" />
+            android:defaultValue="0L" />
+        <argument
+            android:name="createNewList"
+            app:argType="boolean"
+            android:defaultValue="false" />
         <fragment
             android:id="@+id/appListFragment"
             android:name="com.example.myapp.page.applist.AppListFragment"
