implemented first list's navigation.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,7 @@
         <argument
             android:name="createNewList"
             app:argType="boolean"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
         <fragment
             android:id="@+id/appListFragment"
             android:name="com.example.myapp.page.applist.AppListFragment"
