--- a/app/src/main/res/drawable/ic_baseline_check_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_check_24.xml
@@ -6,5 +6,5 @@
     android:tint="?attr/colorControlNormal">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M7,14l5,-5 5,5z"/>
+      android:pathData="M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z"/>
 </vector>
