--- a/app/src/main/res/layout/add_app_button.xml
+++ b/app/src/main/res/layout/add_app_button.xml
@@ -17,18 +17,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
+        <ImageButton
             android:id="@+id/add_app_card_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            android:contentDescription="@string/to_add_app"
+            android:focusable="true"
+            android:src="@drawable/ic_baseline_add_24"
+            android:background="@drawable/add_button_shape"
             android:visibility="@{appListViewModel.addButtonVisible}"
-            android:contentDescription="@string/add_button_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_add"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
