--- a/app/src/main/res/values/speed_dial.xml
+++ b/app/src/main/res/values/speed_dial.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="fab_action1" type="id"/>
-    <item name="fab_action2" type="id"/>
+    <item name="save_action" type="id"/>
+    <item name="share_action" type="id"/>
 </resources>
