--- a/app/src/main/res/layout/list_item_app.xml
+++ b/app/src/main/res/layout/list_item_app.xml
@@ -54,11 +54,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/imageButton"
                     app:layout_constraintStart_toEndOf="@+id/app_image"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.2"
                     tools:text="@string/app_name" />
 
 
@@ -71,7 +69,7 @@
                     android:background="#ffffff"
                     android:inputType="textMultiLine"
                     android:minLines="3"
-                    android:visibility="@{appCard.editable? View.VISIBLE : View.GONE}"
+                    android:visibility="@{appListViewModel.reviewEditableList[appCard.originalIndex]? View.VISIBLE : View.GONE}"
                     android:text="@={appListViewModel.userReviewList[appCard.originalIndex]}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -84,9 +82,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     app:layout_constraintBottom_toTopOf="@+id/app_review_text"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/app_name"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintEnd_toStartOf="@+id/textAppCardIndex"
+                    app:layout_constraintStart_toEndOf="@+id/app_image"
+                    app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
                 <TextView
                     android:id="@+id/textAppCardIndex"
@@ -94,9 +92,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     app:layout_constraintBottom_toTopOf="@+id/app_review_text"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
                     app:layout_constraintStart_toEndOf="@+id/textAppCardId"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
                 <ImageButton
                     android:id="@+id/imageButton"
@@ -108,7 +106,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.2"
-                    android:src="@{appCard.editable? @drawable/ic_baseline_arrow_drop_up_36 :@drawable/ic_baseline_create_24}"
+                    android:src="@{appListViewModel.reviewEditableList[appCard.originalIndex]? @drawable/ic_baseline_arrow_drop_up_36 :@drawable/ic_baseline_create_24}"
                     />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
